--- a/ui/dashboards/package.json
+++ b/ui/dashboards/package.json
@@ -23,6 +23,8 @@
     "lint:fix": "eslint --fix src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@dnd-kit/core": "^5.0.0",
+    "@dnd-kit/sortable": "^6.0.0",
     "@perses-dev/components": "^0.4.2",
     "@perses-dev/core": "^0.4.2",
     "@perses-dev/plugin-system": "^0.4.2",
@@ -32,7 +34,8 @@
   },
   "peerDependencies": {
     "@mui/material": "^5.5.1",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "files": [
     "dist"
