--- a/ui/dashboards/package.json
+++ b/ui/dashboards/package.json
@@ -28,12 +28,14 @@
     "@perses-dev/core": "^0.4.2",
     "@perses-dev/plugin-system": "^0.4.2",
     "immer": "^9.0.12",
+    "react-grid-layout": "^1.3.4",
     "use-immer": "^0.6.0",
     "use-resize-observer": "^8.0.0"
   },
   "peerDependencies": {
     "@mui/material": "^5.5.1",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "files": [
     "dist"
