--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-grid-layout": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "cross-env": "^7.0.3",
