--- a/ui/dashboards/package.json
+++ b/ui/dashboards/package.json
@@ -27,10 +27,13 @@
     "@perses-dev/components": "^0.5.2",
     "@perses-dev/core": "^0.5.2",
     "@perses-dev/plugin-system": "^0.5.2",
+    "@types/react-grid-layout": "^1.3.2",
     "immer": "^9.0.15",
+    "react-grid-layout": "^1.3.4",
     "react-intersection-observer": "^9.4.0",
     "use-immer": "^0.7.0",
-    "use-resize-observer": "^8.0.0"
+    "use-resize-observer": "^8.0.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "intersection-observer": "^0.12.2"
